Bug 309064 - some state diagram widgets could not be added
Summary: some state diagram widgets could not be added
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: SVN
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-26 20:42 UTC by Ralf Habacker
Modified: 2013-11-02 17:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2012-10-26 20:42:09 UTC
Adding an initial or end state widget to state diagrams is not possible


Reproducible: Always

Steps to Reproduce:
1. create new state diagram
2. add initial widget

Actual Results:  
no initial widget is added

Expected Results:  
initial widget should be added
Comment 1 Ralf Habacker 2012-10-26 20:47:42 UTC
SVN commit 1322695 by habacker:

Bug fix not been able to add some state widgets.


 M  +1 -0      ChangeLog  
 M  +1 -1      umbrello/widgets/umlwidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1322695