Bug fix not been able to add some state widgets.

BUG: 309064

svn path=/trunk/KDE/kdesdk/umbrello/; revision=1322695